--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,26 @@
 @import url('https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Quicksand&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@keyframes border-animate {
+    0% {
+        border-color: transparent;
+    }
+    50% {
+        border-color: #3b82f6; /* Blue */
+    }
+    100% {
+        border-color: transparent;
+    }
+}
+
+.animate-border {
+    animation: border-animate 2s infinite ease-in-out;
+}
+
+html {
+    scroll-behavior: smooth;
+}
